--- a/index.html
+++ b/index.html
@@ -17,25 +17,27 @@
             <h1>Tap Music</h1>
             <p>Make music with a tap</p>
         </header>
-        <div class="visual"></div>
+        <div class="visual">
+            <h1>Visual</h1>
+        </div>
         <div class="pads">
             <div class="pad1">
-                <audio src="./sounds/bubbles.mp3"></audio>
+                <audio class="sound" src="./sounds/bubbles.mp3"></audio>
             </div>
             <div class="pad2">
-                <audio src="./sounds/clay.mp3"></audio>
+                <audio class="sound" src="./sounds/clay.mp3"></audio>
             </div>
             <div class="pad3">
-                <audio src="./sounds/confetti.mp3"></audio>
+                <audio class="sound" src="./sounds/confetti.mp3"></audio>
             </div>
             <div class="pad4">
-                <audio src="./sounds/glimmer.mp3"></audio>
+                <audio class="sound" src="./sounds/glimmer.mp3"></audio>
             </div>
             <div class="pad5">
-                <audio src="./sounds/moon.mp3"></audio>
+                <audio class="sound" src="./sounds/moon.mp3"></audio>
             </div>
             <div class="pad6">
-                <audio src="./sounds/ufo.mp3"></audio>
+                <audio class="sound" src="./sounds/ufo.mp3"></audio>
             </div>
         </div>
     </div>
@@ -48,5 +50,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
