--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Make music with a tap</p>
         </header>
         <div class="visual">
-            <h1>Visual</h1>
+            <!-- <h1>Visual</h1> -->
         </div>
         <div class="pads">
             <div class="pad1">
